--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -26,6 +26,18 @@ jobs:
           # An ordered list of prefix-matched keys to use for restoring stale cache if no cache hit occurred for key.
           restore-keys: |
             bazel-
+      - name: Specify user.bazelrc for CI only settings
+        env:
+          BUILDBUDDY_API_KEY: ${{ secrets.BUILDBUDDY_API_KEY }}
+        run: |
+          cat <<EOF > user.bazelrc
+          build --bes_results_url=https://app.buildbuddy.io/invocation/
+          build --bes_backend=grpcs://remote.buildbuddy.io
+          build --remote_cache=grpcs://remote.buildbuddy.io
+          build --noremote_upload_local_results # Uploads logs & artifacts without writing to cache
+          build --remote_timeout=3600
+          build --remote_header=x-buildbuddy-api-key="$BUILDBUDDY_API_KEY"
+          EOF
       - name: Lint
         run: |
           ./lint.sh --mode check
