--- a/.bazelrc
+++ b/.bazelrc
@@ -117,6 +117,10 @@ build --@rules_rust//cargo/settings:experimental_symlink_execroot=True
 # LINK(7e463bc3_e4d9_4464_ba39_3217c4a86004)
 common --@aspect_rules_py//py:interpreter_version=3.11.9
 
+# Reduce payload size of uploaded build event stream by eliminating duplicate
+# file references
+--nolegacy_important_outputs
+
 # Build Event Server
 # ==================
 # build --bes_results_url=https://app.buildbuddy.io/invocation/
